# NCEPlibs

./: Makefile  README  README.md  macros.make.cheyenne.gnu  macros.make.cheyenne.intel  macros.make.cheyenne.pgi  macros.make.gaea.intel  macros.make.hera.intel  macros.make.jet.intel  macros.make.linux.gnu  macros.make.linux.intel  macros.make.macbook.gnu  macros.make.macosx.gnu  macros.make.theia.gnu  macros.make.theia.intel  macros.make.theia.pgi  macros.make.ubuntu.gnu  make_ncep_libs.sh
src/g2/v3.1.0/: INSTALLATION.README  Makefile  install_g2_lib.sh
src/g2/v3.1.0/src/: CHANGES  enc_jpeg2000.c  intmath.f  makefile  makefile.not_used  makefile_4  makefile_4_test  makefile_4_wcoss  makefile_d  makefile_d_test  makefile_d_wcoss  makeg2lib_cray.sh  makeg2lib_intel.sh  makeg2lib_wcoss.sh
src/g2tmpl/v1.5.0/src/: Makefile  makefile_cray  makefile_wcoss  makeg2tmpllib_intel.sh  makeg2tmpllib_wcoss.sh  process_4dot2.c
src/gfsio/v1.1.0/src/: make_wcoss.sh  makefile  makefile_4
src/ip/v3.0.0/: Makefile.in  Release_Notes.iplib.v3.0.0.txt  configure  configure.ac  make_ip_lib.sh  make_ip_lib_wcoss-cray.sh
src/ip/v3.0.0/config-setup/: crayftn-debug.setup  crayftn.setup  gfortran-debug.setup  gfortran.setup  ifort-debug.setup  ifort.setup  pgf95-debug.setup  pgf95.setup  xlf2003-debug.setup  xlf2003.setup
src/ip/v3.0.0/sorc/: Makefile  make.dependencies  make.filelist
src/landsfcutil/v2.1.0/: Makefile.in  Release_Notes.landsfcutil.v2.1.0.txt  configure  configure.ac  make_landsfcutil_lib.sh  make_landsfcutil_lib_wcoss-cray.sh
src/landsfcutil/v2.1.0/config-setup/: crayftn-debug.setup  crayftn.setup  gfortran-debug.setup  gfortran.setup  ifort-debug.setup  ifort.setup  pgf95-debug.setup  pgf95.setup  xlf2003-debug.setup  xlf2003.setup
src/landsfcutil/v2.1.0/src/: Makefile  Makefile.in  interp_utils.f  ll2xy_utils.f  make.dependencies  make.filelist  read_write_utils.f  soil_utils.f
src/nemsio/v2.2.3/src/: Makefile  nemsio_openclose.f90
src/nemsiogfs/v2.0.1/src/: build.sh  clean.sh  makefile  nemsio_gfs.f90
src/sfcio/v1.0.0/src/: Makefile  make.sh  makefile_4
src/sigio/v2.0.1/src/: Makefile
src/sp/v2.0.2/src/: ncpus.F
src/w3emc/v2.2.0/src/: Makefile  makefile_4  makefile_d
src/w3nco/v2.0.6/src/: instrument.f  makefile_4  makefile_d
src/wrfio/v1.1.1/src/: build_wrfio.log.cray.0816  build_wrfio.sh  configure  install_wrfio.sh  makefile
